# Automatix_Cient

./: .gitignore  CMakeLists.txt  build.sh  build_vs2022.bat  gen.sh  main.cpp  run.bat  run.sh
app_demo/game_platform/: main.lua
automatix_realtime/: CMakeLists.txt  automatix.cpp  automatix.h  main.cpp  moon.cpp
automatix_realtime/actor_module/: net_actor.h  net_worker.cpp  net_worker.h
automatix_realtime/amx_core/: CMakeLists.txt  config.hpp
automatix_realtime/amx_core/common/: buffer.hpp  byte_convert.hpp  cross_list.hpp  directory.hpp  file.hpp  lua_utility.hpp  noncopyable.hpp  random.hpp  return_code.hpp  rwlock.hpp  sha1.hpp  singleton.hpp  string.hpp  time.hpp  timer.hpp  zset.hpp
automatix_realtime/amx_core/kernel/: log.hpp  lua_service.cpp  lua_service.h  message.hpp  server.cpp  server.h  service.hpp  worker.cpp  worker.h
automatix_realtime/amx_core/log/: log.hpp
automatix_realtime/amx_core/net/: amx_connection.hpp  base_connection.hpp  client.h  const_buffers_holder.hpp  message.hpp  net_client.h  socket_server.cpp  socket_server.h  write_buffer.hpp  ws_connection.hpp
automatix_realtime/amx_core/struct/: json_writer.h  yaml_writer.h
automatix_realtime/amx_core_lua_api/: CMakeLists.txt  lua_aoi.cpp  lua_buffer.cpp  lua_coroutine.cpp  lua_fs.cpp  lua_http.cpp  lua_json.cpp  lua_kcp.cpp  lua_moon.cpp  lua_navmesh.cpp  lua_random.cpp  lua_schema.cpp  lua_serialize.cpp  lua_socket.cpp  lua_uuid.cpp  lua_zset.cpp
automatix_realtime/amx_gameplay/: CMakeLists.txt  main.cpp
automatix_realtime/amx_launch/: CMakeLists.txt  main.cpp
automatix_realtime/amx_platform/: CMakeLists.txt  main.cpp  tcp_client.cpp  tcp_client.h
automatix_realtime/amx_platform/pb/: roommanager.pb.cc  roommanager.pb.h
automatix_realtime/amx_unittest/: CMakeLists.txt  main.cpp
automatix_realtime/base/: module.h  system.h
automatix_realtime/common/: base64.hpp  buffer_view.hpp  common.hpp  concurrent_map.hpp  concurrent_queue.hpp  context.hpp  exception.hpp  file.hpp  hash.hpp  http_utility.hpp  lua_utility.hpp  md5.hpp  navmesh.hpp  object_pool.hpp  singleton.hpp  spinlock.hpp  string.hpp  var_list.hpp  zset.hpp
automatix_realtime/concurrent/: actor.cpp  actor.h  actor_config.h  actor_manager.cpp  actor_manager.h  master_actor.h  supervisor.cpp  supervisor.h  supervisor_tree.cpp  supervisor_tree.h  worker.cpp  worker.h
automatix_realtime/core/network/: base_connection.hpp  const_buffers_holder.hpp  socket_server.cpp  socket_server.h
automatix_realtime/kernel/: lua_service.h  server.cpp  server.h  service.hpp  worker.cpp  worker.h
automatix_realtime/log/: log.hpp
automatix_realtime/net/: error.hpp  moon_connection.hpp  net.cpp  net.h  socket_server.cpp  socket_server.h  stream_connection.hpp  streambuf.hpp
automatix_realtime/realtime/: realtime.cpp  realtime.h
automatix_realtime/script/: lua_buffer.cpp  lua_fs.cpp  lua_kcp.cpp  lua_moon.cpp  lua_random.cpp  lua_schema.cpp  lua_serialize.cpp  lua_zset.cpp
automatix_realtime/services/: lua_service.cpp  lua_service.h
automatix_realtime/struct/: json_reader.h  json_writer.h  xml_reader.h  xml_writer.h  yaml_reader.h  yaml_writer.h
automatix_realtime/test/: automatix_test.cpp  automatix_test.h
automatix_rt/: CMakeLists.txt
example/: CMakeLists.txt  main_game.lua  main_hub.lua  start_server.bat
example/01-helloworld/: CMakeLists.txt  main.cpp
example/helloworld/: example_helloworld.cpp
example/protobuf/: test.pb.cc
game/: build.bat  main_game.lua
lib/: nakama-sdk.lib
lualib-src/: CMakeLists.txt
lualib/moon/http/: internal.lua
protobuf/: test.pb.h
share/nakama-sdk/: nakama-export.cmake
src/: CMakeLists.txt
src/example/: lib.cpp  lib.h
